--- a/src/Views/CommitDetail.axaml
+++ b/src/Views/CommitDetail.axaml
@@ -25,28 +25,40 @@
         <Rectangle Grid.Row="1" Height=".65" Margin="8" Fill="{DynamicResource Brush.Border2}" VerticalAlignment="Center"/>
 
         <!-- Change List -->
-        <Grid Grid.Row="2" ColumnDefinitions="96,*" Margin="0,0,8,16">
-          <TextBlock Grid.Column="0"
-                     Classes="group_header_label" 
-                     Margin="0"
-                     HorizontalAlignment="Right"
-                     VerticalAlignment="Top"
-                     Text="{DynamicResource Text.CommitDetail.Changes}"/>
-          
-          <v:ChangeCollectionView Grid.Column="1" 
-                                  IsWorkingCopyChange="False"
-                                  Margin="8,0,0,0"
-                                  ViewMode="List"
-                                  Changes="{Binding Changes}"
-                                  ContextRequested="OnChangeListContextRequested"
-                                  ChangeDoubleTapped="OnChangeDoubleTapped">
-            <v:ChangeCollectionView.Styles>
-              <Style Selector="TreeDataGrid">
-                <Setter Property="ScrollViewer.HorizontalScrollBarVisibility" Value="Disabled"/>
-              </Style>
-            </v:ChangeCollectionView.Styles>
-          </v:ChangeCollectionView>
-        </Grid>
+        <DataGrid Grid.Row="2"
+                  Background="Transparent"
+                  ItemsSource="{Binding Changes}"
+                  SelectionMode="Single"
+                  CanUserReorderColumns="False"
+                  CanUserResizeColumns="False"
+                  CanUserSortColumns="False"
+                  IsReadOnly="True"
+                  HeadersVisibility="None"
+                  Focusable="False"
+                  RowHeight="26"
+                  Margin="80,0,8,16"
+                  HorizontalScrollBarVisibility="Disabled"
+                  VerticalScrollBarVisibility="Auto"
+                  ContextRequested="OnChangeListContextRequested"
+                  DoubleTapped="OnChangeListDoubleTapped">
+          <DataGrid.Columns>
+            <DataGridTemplateColumn Header="ICON">
+              <DataGridTemplateColumn.CellTemplate>
+                <DataTemplate>
+                  <v:ChangeStatusIcon Width="14" Height="14" IsWorkingCopyChange="False" Change="{Binding}"/>
+                </DataTemplate>
+              </DataGridTemplateColumn.CellTemplate>
+            </DataGridTemplateColumn>
+
+            <DataGridTemplateColumn Width="*" Header="PATH">
+              <DataGridTemplateColumn.CellTemplate>
+                <DataTemplate>
+                  <TextBlock Classes="monospace" Text="{Binding Path}" Margin="8,0,0,0"/>
+                </DataTemplate>
+              </DataGridTemplateColumn.CellTemplate>
+            </DataGridTemplateColumn>
+          </DataGrid.Columns>
+        </DataGrid>
       </Grid>
     </TabItem>
 
