--- a/src/Resources/Locales/en_US.axaml
+++ b/src/Resources/Locales/en_US.axaml
@@ -458,6 +458,8 @@
   <x:String x:Key="Text.TagCM.Delete" xml:space="preserve">Delete${0}$</x:String>
   <x:String x:Key="Text.TagCM.Push" xml:space="preserve">Push${0}$</x:String>
   <x:String x:Key="Text.URL" xml:space="preserve">URL :</x:String>
+  <x:String x:Key="Text.UpdateSubmodules" xml:space="preserve">Update Submodules</x:String>
+  <x:String x:Key="Text.UpdateSubmodules.Tip" xml:space="preserve">Run `submodule update` command for this repository.</x:String>
   <x:String x:Key="Text.Warn" xml:space="preserve">Warning</x:String>
   <x:String x:Key="Text.Welcome.AddRootFolder" xml:space="preserve">Create Group</x:String>
   <x:String x:Key="Text.Welcome.AddSubFolder" xml:space="preserve">Create Sub-Group</x:String>
