ux: get brush color for LineBackgrounRenderer from themes

--- a/src/Views/TextDiffView.axaml
+++ b/src/Views/TextDiffView.axaml
@@ -13,6 +13,11 @@
     <DataTemplate DataType="m:TextDiff">
       <v:CombinedTextDiffPresenter BorderBrush="{DynamicResource Brush.Border2}"
                                    BorderThickness="0"
+                                   LineBGEmpty = "{DynamicResource Brush.TextDiffView.LineBG1.EMPTY}"
+                                   LineBGAdd = "{DynamicResource Brush.TextDiffView.LineBG1.ADD}"
+                                   LineBGDeleted = "{DynamicResource Brush.TextDiffView.LineBG1.DELETED}"
+                                   SecondaryLineBGAdd = "{DynamicResource Brush.TextDiffView.LineBG2.ADD}"
+                                   SecondaryLineBGDeleted = "{DynamicResource Brush.TextDiffView.LineBG2.DELETED}"
                                    Foreground="{DynamicResource Brush.FG1}"
                                    SecondaryFG="{DynamicResource Brush.FG2}"
                                    FontFamily="{Binding Source={x:Static vm:Preference.Instance}, Path=MonospaceFont}"
@@ -31,6 +36,11 @@
                                        IsOld="True"
                                        BorderBrush="{DynamicResource Brush.Border2}"
                                        BorderThickness="0"
+                                       LineBGEmpty = "{DynamicResource Brush.TextDiffView.LineBG1.EMPTY}"
+                                       LineBGAdd = "{DynamicResource Brush.TextDiffView.LineBG1.ADD}"
+                                       LineBGDeleted = "{DynamicResource Brush.TextDiffView.LineBG1.DELETED}"
+                                       SecondaryLineBGAdd = "{DynamicResource Brush.TextDiffView.LineBG2.ADD}"
+                                       SecondaryLineBGDeleted = "{DynamicResource Brush.TextDiffView.LineBG2.DELETED}"
                                        Foreground="{DynamicResource Brush.FG1}"
                                        SecondaryFG="{DynamicResource Brush.FG2}"
                                        FontFamily="{Binding Source={x:Static vm:Preference.Instance}, Path=MonospaceFont}"
@@ -45,6 +55,11 @@
                                        IsOld="False"
                                        BorderBrush="{DynamicResource Brush.Border2}"
                                        BorderThickness="0"
+                                       LineBGEmpty = "{DynamicResource Brush.TextDiffView.LineBG1.EMPTY}"
+                                       LineBGAdd = "{DynamicResource Brush.TextDiffView.LineBG1.ADD}"
+                                       LineBGDeleted = "{DynamicResource Brush.TextDiffView.LineBG1.DELETED}"
+                                       SecondaryLineBGAdd = "{DynamicResource Brush.TextDiffView.LineBG2.ADD}"
+                                       SecondaryLineBGDeleted = "{DynamicResource Brush.TextDiffView.LineBG2.DELETED}"
                                        Foreground="{DynamicResource Brush.FG1}"
                                        SecondaryFG="{DynamicResource Brush.FG2}"
                                        FontFamily="{Binding Source={x:Static vm:Preference.Instance}, Path=MonospaceFont}"
