--- a/src/App.axaml
+++ b/src/App.axaml
@@ -13,6 +13,7 @@
 
       <ResourceInclude x:Key="en_US" Source="/Resources/Locales/en_US.axaml"/>
       <ResourceInclude x:Key="zh_CN" Source="/Resources/Locales/zh_CN.axaml"/>
+      <ResourceInclude x:Key="zh_TW" Source="/Resources/Locales/zh_TW.axaml"/>
     </ResourceDictionary>
   </Application.Resources>
 
